--- a/MyDictionary/MyDictionary/Views/ListPage.xaml
+++ b/MyDictionary/MyDictionary/Views/ListPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyDictionary.Views.ListPage">
+             x:Class="MyDictionary.Views.ListPage" Title="MyDictionary">
     
     <ContentPage.ToolbarItems>
         <ToolbarItem Name="Refresh" Activated="onMenuRefresh" Order="Secondary" Priority="1"></ToolbarItem>
