--- a/MyDictionary/MyDictionary/Views/MenuPage.xaml
+++ b/MyDictionary/MyDictionary/Views/MenuPage.xaml
@@ -8,15 +8,13 @@
         </StackLayout>
         <StackLayout Padding="10" Spacing="10" VerticalOptions="CenterAndExpand">
             <Label Text="Sözlük Hakkında" TextColor="Black"></Label>
-            <Label Text="Başarı Hikayeleri" TextColor="Black"></Label>
-            <Label Text="Açık Akademi Tv" TextColor="Black"></Label>
-            <Label Text="İlk 10" TextColor="Black"></Label>
-            <Label Text="Soru-Cevap" TextColor="Black"></Label>
             <Label Text="İletişim" TextColor="Black"></Label>
         </StackLayout>
-        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" HeightRequest="20" VerticalOptions="End" Padding="0,0,0,30">
-            <Label Text="Halil İbrahim POYRAZ" TextColor="Blue" FontSize="Small"></Label>
-            <Label Text="|| Her Hakkı Saklıdır ®" TextColor="Blue" FontSize="Small"></Label>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="End" Padding="0,0,0,8">
+            <Label Text="Halil İbrahim POYRAZ" TextColor="Blue" FontSize="Micro"></Label>
+        </StackLayout>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" HeightRequest="20" VerticalOptions="End">
+            <Label Text="Her Hakkı Saklıdır ®" TextColor="Blue" FontSize="Micro"></Label>
         </StackLayout>
     </StackLayout>
 </ContentPage>
